--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,4 +1,8 @@
 
+@import "base/mixin";
+
+@import "base/animation";
+
 @import "base/variables";
 
 @import "base/homepage";
@@ -12,6 +16,7 @@
 @import "base/portfolio";
 
 @import "base/navbar";
+
 
 
 
