--- a/app/sass/base/_about.scss
+++ b/app/sass/base/_about.scss
@@ -1,10 +1,18 @@
 
-.about-text {background-color: rgba($color-tertiary, 0.7); margin-top: 1rem; padding: 1.8rem; color: $color-secondary-light; font-size: 1.63rem; font-weight: 500; border-radius: 0.8rem; transition: transform .3s; box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
+.about {margin: 0 15rem 0 15rem;
 
-    &:hover {transform: translateY(-1.5rem) scale(0.99);}
+    .about-text {background-color: rgba($color-tertiary, 0.7); margin-top: 1rem; padding: 1.8rem; color: $color-secondary-light; font-size: 1.63rem; font-weight: 500; border-radius: 0.8rem; transition: transform .3s; box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
+
+        @include respond(phone){margin: 1rem -7rem 0 -7rem; padding: 2rem;}
+    
+        &:hover {transform: translateY(-1.5rem) scale(0.99);}
+    }
+
+    //@include respond(tab-port){margin: 0 10rem 0 10rem; padding: 3rem;}
+    
+    
+    #profile1 {margin-bottom: 2rem;}
+    #profile2 {margin-bottom: 2rem;}
+    
+    .move-in-bottom {animation: $animation-bottom}
 }
-
-#profile1 {margin-bottom: 2rem;}
-#profile2 {margin-bottom: 2rem;}
-
-.move-in-bottom {animation: $animation-bottom}
