--- a/app/sass/base/_variables.scss
+++ b/app/sass/base/_variables.scss
@@ -13,6 +13,7 @@ $color-black: rgb(0, 0, 0);
 //grid size
 $grid-width: 114rem;
 $gutter-vertical:8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal:6rem;
 
 //mixins
