--- a/app/sass/base/_about.scss
+++ b/app/sass/base/_about.scss
@@ -4,6 +4,7 @@
     .about-text {background-color: rgba($color-tertiary, 0.7); margin-top: 1rem; padding: 1.8rem; color: $color-secondary-light; font-size: 1.63rem; font-weight: 500; border-radius: 0.8rem; transition: transform .3s; box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
 
         @include respond(phone){margin: 1rem -7rem 0 -7rem; padding: 2rem;}
+        @include respond(small-phone){margin: 0 -14rem 0 -14rem; padding: 1rem; font-size: 1.5rem;} 
     
         &:hover {transform: translateY(-1.5rem) scale(0.99);}
     }
