--- a/app/sass/base/_mixin.scss
+++ b/app/sass/base/_mixin.scss
@@ -12,6 +12,9 @@
 //1em = 16px @media (max-width: 37.5em) {@content}; //600px
 
 @mixin respond($breakpoint) {
+    @if $breakpoint == small-phone {
+        @media (max-width: 20em) {@content}; //320px
+    }
     @if $breakpoint == phone {
         @media (max-width: 37.5em) {@content}; //600px
     }
