--- a/app/css/style.css
+++ b/app/css/style.css
@@ -61,6 +61,9 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 20em) {
+    html {
+      font-size: 40%; } }
   @media (max-width: 75em) {
     html {
       font-size: 56.25%; } }
@@ -126,8 +129,13 @@ body {
   @media (max-width: 37.5em) {
     .icons {
       left: -6%; } }
+  @media (max-width: 20em) {
+    .icons {
+      display: none; } }
   .icons__margin {
     margin-top: -8px; }
+  .icons__fav {
+    margin: 1rem; }
 
 .name {
   color: #000080;
@@ -293,6 +301,11 @@ body {
       .about .about-text {
         margin: 1rem -7rem 0 -7rem;
         padding: 2rem; } }
+    @media (max-width: 20em) {
+      .about .about-text {
+        margin: 0 -14rem 0 -14rem;
+        padding: 1rem;
+        font-size: 1.5rem; } }
     .about .about-text:hover {
       transform: translateY(-1.5rem) scale(0.99); }
   .about #profile1 {
