--- a/app/sass/base/_gallery.scss
+++ b/app/sass/base/_gallery.scss
@@ -1,5 +1,8 @@
 
-.image-clip {--webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); }
+.image-clip {--webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); 
+
+    // @include respond(small-phone){display: none;}
+}
 
 .cover {background-color: $color-primary}
 
