--- a/app/sass/base/_homepage.scss
+++ b/app/sass/base/_homepage.scss
@@ -4,9 +4,9 @@
 
 html {font-size: 62.5%;
 
-    // @include respond(phone) {
-    //     font-size: 50%;
-    // }
+    @include respond(small-phone) {
+        font-size: 40%;
+    }
 
     @include respond(tab-land){
         font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
@@ -41,7 +41,11 @@ body {font-family: 'Indie Flower', cursive; font-weight: 400; /*font-size: 16px;
     @include respond(tab-port){left: 13%;}
     @include respond(phone){left: -6%;}
 
+    @include respond(small-phone){display: none;}
+
     &__margin {margin-top: -8px;}
+
+    &__fav {margin: 1rem;}
 }
 
 .name {color: $color-primary; text-transform: uppercase; backface-visibility: hidden; text-align: center;
