--- a/app/sass/base/_mixin.scss
+++ b/app/sass/base/_mixin.scss
@@ -15,6 +15,9 @@
     @if $breakpoint == small-phone {
         @media (max-width: 20em) {@content}; //320px
     }
+    @if $breakpoint == mid-phone {
+        @media (max-width: 26.7em) {@content}; //425px
+    }
     @if $breakpoint == phone {
         @media (max-width: 37.5em) {@content}; //600px
     }
