--- a/app/css/style.css
+++ b/app/css/style.css
@@ -102,12 +102,18 @@ body {
   background-size: cover;
   background-position: center;
   position: relative; }
+  @media (max-width: 75em) {
+    .header {
+      height: 189vh; } }
   .header__my-logo {
     position: absolute;
     top: -5rem;
     left: 4rem; }
   .header__logo {
     height: 20rem; }
+    @media (max-width: 37.5em) {
+      .header__logo {
+        height: 15rem; } }
   .header__screen-text {
     position: absolute;
     top: 40%;
@@ -129,7 +135,7 @@ body {
   @media (max-width: 37.5em) {
     .icons {
       left: -6%; } }
-  @media (max-width: 20em) {
+  @media (max-width: 26.7em) {
     .icons {
       display: none; } }
   .icons__margin {
@@ -397,7 +403,8 @@ body {
   color: #000080;
   text-align: center;
   font-size: 2rem;
-  font-weight: 400; }
+  font-weight: 400;
+  margin-top: 1.5rem; }
   @media (max-width: 56.25em) {
     .icon {
       margin-top: 8rem; } }
