--- a/app/sass/base/_portfolio.scss
+++ b/app/sass/base/_portfolio.scss
@@ -53,7 +53,7 @@
     
 }
 
-.icon {color: $color-primary; text-align: center; font-size: 2rem; font-weight: 400;
+.icon {color: $color-primary; text-align: center; font-size: 2rem; font-weight: 400; margin-top: 1.5rem;
 
     @include respond(tab-port){margin-top: 8rem}
 }
