--- a/app/sass/base/_homepage.scss
+++ b/app/sass/base/_homepage.scss
@@ -1,70 +1,179 @@
-/*font-family: 'Indie Flower', cursive; font-family: 'Mali', cursive; 'Gloria Hallelujah', cursive*/ 
+/*font-family: 'Indie Flower', cursive; font-family: 'Mali', cursive; 'Gloria Hallelujah', cursive*/
 
-*, *::after, *::before {margin: 0; padding: 0; box-sizing: inherit}
-
-html {font-size: 62.5%;
-
-    @include respond(small-phone) {
-        font-size: 40%;
-    }
-
-    @include respond(tab-land){
-        font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
-    }
-
-    @include respond(tab-port){
-        font-size: 50%; //1rem = 8px
-    }
-
-    @include respond(big-desktop){
-        font-size: 75%; //1rem = 12px
-    }
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-a {color: $color-primary}
-a:hover {color: rgb(242, 242, 242)}
+html {
+  font-size: 62.5%;
 
-body {font-family: 'Indie Flower', cursive; font-weight: 400; /*font-size: 16px;*/ line-height: 1.7; color: #777; box-sizing: border-box}
+  @include respond(small-phone) {
+    font-size: 40%;
+  }
 
-.fa {font-size: 2rem; color: $color-primary}
-.flag {width: 2rem; height: 1.4rem}
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
+  }
 
-.header {height: 100vh; background-image: linear-gradient(to left bottom, rgba($color-secondary-dark, 0.7), rgba($color-secondary-light, 0.7)), url(../img/old/steve.jpg); background-size: cover; background-position: center; position: relative;
+  @include respond(tab-port) {
+    font-size: 50%; //1rem = 8px
+  }
 
-    @include respond(tab-land){height: 189vh;}
-
-    &__my-logo {position: absolute; top: -5rem; left: 4rem;}
-    &__logo {height: 20rem;
-
-        @include respond(phone){height: 15rem;}
-    }
-    &__screen-text {position: absolute; top: 40%; left: 20%; transform: translate(-5%, -10%)}
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12px
+  }
 }
 
-.icons {color: $color-primary; position: absolute; top: 80%; left: 20%; transform: translate(50%, 50%); text-align: center; font-size: 2rem; font-weight: 400;
-
-    @include respond(tab-port){left: 13%;}
-    @include respond(phone){left: -6%;}
-
-    @include respond(mid-phone){display: none;}
-
-    &__margin {margin-top: -8px;}
-
-    &__fav {margin: 1rem;}
+a {
+  color: $color-primary;
+}
+a:hover {
+  color: rgb(242, 242, 242);
 }
 
-.name {color: $color-primary; text-transform: uppercase; backface-visibility: hidden; text-align: center;
-
-    // @include respond(tab-port){margin-left: 0rem;}
-
-    &--main {display: block; font-size: 5rem; font-weight: 400; animation: $animation-rotate;
-
-        @include respond(phone){font-size: 3.2rem;}
-    
-    }
-    &--sub {display: block; font-size: $default-font-size; font-weight: 700; letter-spacing: .68rem; animation: $animation-right; 
-
-        @include respond(phone){font-size: 1rem; letter-spacing: .43rem;}
-    }
+body {
+  font-family: "Indie Flower", cursive;
+  font-weight: 400; /*font-size: 16px;*/
+  line-height: 1.7;
+  color: #777;
+  box-sizing: border-box;
 }
 
+.fa {
+  font-size: 2rem;
+  color: $color-primary;
+}
+.flag {
+  width: 2rem;
+  height: 1.4rem;
+}
+
+.header {
+  height: 100vh;
+  background-image: linear-gradient(
+      to left bottom,
+      rgba($color-secondary-dark, 0.7),
+      rgba($color-secondary-light, 0.7)
+    ),
+    url(../img/old/steve.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+
+  @include respond(tab-land) {
+    height: 189vh;
+  }
+
+  &__my-logo {
+    position: absolute;
+    top: -5rem;
+    left: 4rem;
+  }
+  &__logo {
+    height: 20rem;
+
+    @include respond(phone) {
+      height: 15rem;
+    }
+  }
+  &__screen-text {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    transform: translate(-5%, -10%);
+  }
+}
+
+.icons {
+  color: $color-primary;
+  position: absolute;
+  top: 80%;
+  left: 20%;
+  transform: translate(50%, 50%);
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 400;
+
+  @include respond(tab-port) {
+    left: 13%;
+  }
+  @include respond(phone) {
+    left: -6%;
+  }
+
+  @include respond(mid-phone) {
+    display: none;
+  }
+
+  &__margin {
+    margin-top: -8px;
+  }
+
+  &__fav {
+    margin: 1rem;
+  }
+}
+
+.name {
+  color: $color-primary;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  text-align: center;
+
+  @include respond(tab-port-2) {
+    margin-top: -13rem;
+    font-size: 4rem;
+    margin-top: -18rem;
+  }
+
+  @include respond(tab-port) {
+    margin-top: -20rem;
+    margin-left: -7rem;
+  }
+
+  @include respond(phone) {
+    margin-left: -3.5rem;
+  }
+
+  &--main {
+    display: block;
+    font-size: 5rem;
+    font-weight: 400;
+    animation: $animation-rotate;
+
+    @include respond(tab-port-2) {
+      font-size: 3.5rem;
+    }
+
+    @include respond(tab-port-3) {
+      font-size: 3rem;
+      // letter-spacing: 0.65rem;
+    }
+
+    @include respond(phone) {
+      font-size: 2rem;
+      letter-spacing: 6rem;
+    }
+  }
+  &--sub {
+    display: block;
+    font-size: $default-font-size;
+    font-weight: 700;
+    letter-spacing: 0.68rem;
+    animation: $animation-right;
+
+    @include respond(tab-port-2) {
+      font-size: 1.3rem;
+      letter-spacing: 0.6rem;
+    }
+
+    @include respond(phone) {
+      font-size: 0.7rem;
+      letter-spacing: 0.1rem;
+    }
+  }
+}
