--- a/app/sass/base/_mixin.scss
+++ b/app/sass/base/_mixin.scss
@@ -1,4 +1,3 @@
-
 //MEDIAN QUERY
 
 /*
@@ -7,27 +6,49 @@
 900 - 1200:  Tablet landscape 
 1200 - 1800: Normal style
 1800+ :      Big Desktop
-*/ 
+*/
 
 //1em = 16px @media (max-width: 37.5em) {@content}; //600px
 
 @mixin respond($breakpoint) {
-    @if $breakpoint == small-phone {
-        @media (max-width: 20em) {@content}; //320px
-    }
-    @if $breakpoint == mid-phone {
-        @media (max-width: 26.7em) {@content}; //425px
-    }
-    @if $breakpoint == phone {
-        @media (max-width: 37.5em) {@content}; //600px
-    }
-    @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) {@content}; //900px
-    }
-    @if $breakpoint == tab-land {
-        @media (max-width: 75em) {@content}; //1200px
-    }
-    @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) {@content}; //1800px
-    }
+  @if $breakpoint == small-phone {
+    @media (max-width: 20em) {
+      @content;
+    } //320px
+  }
+  @if $breakpoint == mid-phone {
+    @media (max-width: 26.7em) {
+      @content;
+    } //425px
+  }
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    } //600px
+  }
+   @if $breakpoint == tab-port-3 {
+    @media (max-width: 48.25em) {
+      @content;
+    } //772px
+
+  @if $breakpoint == tab-port-2 {
+    @media (max-width: 49.875em) {
+      @content;
+    } //798px
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    } //900px
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    } //1200px
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    } //1800px
+  }
 }
